added home page

--- a/client/index.html
+++ b/client/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="./components/register.css" />
   </head>
   <body>
-    <h2>Weekly Coding Challenge #1: Sign in/up Form</h2>
+    <h2>Welcome to bla bla bla</h2>
     <div class="container" id="container">
       <div class="form-container sign-up-container">
-        <form action="#">
+        <form action="home.html">
           <h1>Create Account</h1>
-          <div class="social-container">
+          <!-- <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-          <span>or use your email for registration</span>
+          </div> -->
+          <!-- <span>or use your email for registration</span> -->
           <input type="text" placeholder="Name" />
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
@@ -28,15 +28,15 @@
       <div class="form-container sign-in-container">
         <form action="#">
           <h1>Sign in</h1>
-          <div class="social-container">
+          <!-- <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
             <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-          </div>
+          </div> -->
           <span>or use your account</span>
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
-          <a href="#">Forgot your password?</a>
+          <a href="">Forgot your password?</a>
           <button>Sign In</button>
         </form>
       </div>
