--- a/client/home.html
+++ b/client/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./components/home.css" />
+    <link rel="stylesheet" href="./components/card.css" />
   </head>
   <body>
     <section class="head">
@@ -13,11 +14,17 @@
       <div class="container">
         Thapar Institute of Engineering and Technology
       </div>
-      <!-- <div class="background">
-        <div class="transbox">
-          <p>This is some text that is placed in the transparent box.</p>
+    </section>
+
+    <section class="cards">
+      <div class="card">
+        <div class="card-front"></div>
+        <div class="card-back"></div>
+        <h2>hostel</h2>
+        <div class="btns">
+          <a class="link-hostel" href="/index.html"></a>
         </div>
-      </div> -->
+      </div>
     </section>
   </body>
 </html>
