--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./components/register.css" />
+    <!-- <link rel="stylesheet" href="./components/register.css" /> -->
+    <link rel="stylesheet" href="/css/register.css" />
   </head>
   <body>
     <h2>Welcome to bla bla bla</h2>
@@ -62,6 +63,7 @@
       <p>Created with love <i class="fa fa-heart"></i> by AltF4</p>
     </footer>
 
-    <script src="./components/register.js" type="text/javascript"></script>
+    <!-- <script src="./components/register.js" type="text/javascript"></script> -->
+    <script src="/js/register.js" type="text/javascript"></script>
   </body>
 </html>
