--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./components/register.css" />
   </head>
   <body>
-    <h2>Welcome to bla bla bla</h2>
+    <h2>Welcome to Padhai.com</h2>
     <div class="container" id="container">
       <div class="form-container sign-up-container">
         <form action="home.html">
@@ -45,13 +45,13 @@
           <div class="overlay-panel overlay-left">
             <h1>Welcome Back!</h1>
             <p>
-              To keep connected with us please login with your personal info
+              Please login to your account
             </p>
             <button class="ghost" id="signIn">Sign In</button>
           </div>
           <div class="overlay-panel overlay-right">
-            <h1>Hello, Friend!</h1>
-            <p>Enter your personal details and start journey with us</p>
+            <h1>New Here?</h1>
+            <p>Enter the following details</p>
             <button class="ghost" id="signUp">Sign Up</button>
           </div>
         </div>
