--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
           <input type="text" placeholder="Name" />
           <input type="email" placeholder="Email" />
           <input type="password" placeholder="Password" />
-          <button>Sign Up</button>
+          <button class="btn-register">Sign Up</button>
         </form>
       </div>
       <div class="form-container sign-in-container">
