integrated backend with frontend

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <h2>Welcome to Padhai.com</h2>
     <div class="container" id="container">
       <div class="form-container sign-up-container">
-        <form action="home.html">
+        <form>
           <h1>Create Account</h1>
           <!-- <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -20,14 +20,18 @@
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
           </div> -->
           <!-- <span>or use your email for registration</span> -->
-          <input type="text" placeholder="Name" />
-          <input type="email" placeholder="Email" />
-          <input type="password" placeholder="Password" />
+          <input class="name-register" type="text" placeholder="Name" />
+          <input class="email-register" type="email" placeholder="Email" />
+          <input
+            class="password-register"
+            type="password"
+            placeholder="Password"
+          />
           <button class="btn-register">Sign Up</button>
         </form>
       </div>
       <div class="form-container sign-in-container">
-        <form action="#">
+        <form>
           <h1>Sign in</h1>
           <!-- <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -35,19 +39,21 @@
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
           </div> -->
           <span>or use your account</span>
-          <input type="email" placeholder="Email" />
-          <input type="password" placeholder="Password" />
+          <input class="email-login" type="email" placeholder="Email" />
+          <input
+            class="password-login"
+            type="password"
+            placeholder="Password"
+          />
           <a href="">Forgot your password?</a>
-          <button>Sign In</button>
+          <button class="btn-login">Sign In</button>
         </form>
       </div>
       <div class="overlay-container">
         <div class="overlay">
           <div class="overlay-panel overlay-left">
             <h1>Welcome Back!</h1>
-            <p>
-              Please login to your account
-            </p>
+            <p>Please login to your account</p>
             <button class="ghost" id="signIn">Sign In</button>
           </div>
           <div class="overlay-panel overlay-right">
@@ -64,6 +70,7 @@
     </footer>
 
     <!-- <script src="./components/register.js" type="text/javascript"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/register.js" type="text/javascript"></script>
   </body>
 </html>
