--- a/client/home.html
+++ b/client/home.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./components/home.css" />
-    <link rel="stylesheet" href="./components/card.css" />
+    <!-- <link rel="stylesheet" href="./components/home.css" /> -->
+    <!-- <link rel="stylesheet" href="./components/card.css" /> -->
+    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/css/card.css" />
   </head>
   <body>
     <section class="head">
