--- a/client/home.html
+++ b/client/home.html
@@ -7,23 +7,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="./components/home.css" />
     <link rel="stylesheet" href="./components/card.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="head">
       <div class="bg"></div>
-      <div class="container">
+      <div class="text-container">
         Thapar Institute of Engineering and Technology
       </div>
     </section>
-
     <section class="cards">
       <div class="card">
-        <div class="card-front"></div>
-        <div class="card-back"></div>
-        <h2>hostel</h2>
-        <div class="btns">
-          <a class="link-hostel" href="/index.html"></a>
-        </div>
+        <h2 class="card-content">Hostel Help</h2>
+        <div class="card-link"><a href="#">Know More</a></div>
+      </div>
+
+      <div class="card">
+        <h2 class="card-content">Hostel Help</h2>
+        <div class="card-link"><a href="#">Know More</a></div>
+      </div>
+
+      <div class="card">
+        <h2 class="card-content">Hostel Help</h2>
+        <div class="card-link"><a href="#">Know More</a></div>
       </div>
     </section>
   </body>
